--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ body {
 .comment-text {
   font-size: 32px;
   white-space: pre-line;
+  word-wrap: break-word;
 }
 
 .likes {
@@ -105,7 +106,6 @@ body {
   font-family: Helvetica;
   border-radius: 8px;
   border: none;
-  
 }
 
 .add-form-name {
